--- a/android/app/src/main/res/layout/activity_sign_up_email_student.xml
+++ b/android/app/src/main/res/layout/activity_sign_up_email_student.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="#FFFFFF"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".view.studentView.SignUpEmailStudentActivity">
 
     <!-- Scrollview -->
@@ -84,8 +84,8 @@
                 android:id="@+id/studentMail"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginHorizontal="5dp"
                 android:layout_gravity="center"
+                android:layout_marginHorizontal="5dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="6dp"
                 android:background="@drawable/edittext_bg"
@@ -101,8 +101,8 @@
                 android:id="@+id/btnForward"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginHorizontal="5dp"
                 android:layout_gravity="center"
+                android:layout_marginHorizontal="5dp"
                 android:layout_marginTop="15dp"
                 android:backgroundTint="#124090"
                 android:onClick="goForward"
@@ -144,14 +144,14 @@
 
             <!-- Hesabım var -->
             <Button
-                android:id="@+id/haveAccountStudent"
+                android:id="@+id/haveAnAccount"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginHorizontal="5dp"
                 android:layout_gravity="center"
+                android:layout_marginHorizontal="5dp"
                 android:layout_marginVertical="5dp"
                 android:backgroundTint="#EEEEEE"
-                android:onClick="btnHaveAccountStudent"
+                android:onClick="haveAnAccount"
                 android:text="Bir hesabım var"
                 android:textColor="#000000"
                 android:textSize="15sp"
@@ -163,8 +163,8 @@
                 android:id="@+id/forgotPassword"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginHorizontal="5dp"
                 android:layout_gravity="center"
+                android:layout_marginHorizontal="5dp"
                 android:layout_marginVertical="5dp"
                 android:backgroundTint="#EEEEEE"
                 android:text="Şifremi Unuttum"
@@ -178,8 +178,8 @@
                 android:id="@+id/footerText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
                 android:layout_gravity="center"
+                android:layout_marginHorizontal="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="400dp"
                 android:text="@string/text_signIn"
