--- a/android/app/src/main/res/layout/activity_sign_up_email.xml
+++ b/android/app/src/main/res/layout/activity_sign_up_email.xml
@@ -144,14 +144,14 @@
 
             <!-- Hesabım var -->
             <Button
-                android:id="@+id/haveAccount"
+                android:id="@+id/haveAnAccount"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginVertical="5dp"
                 android:backgroundTint="#EEEEEE"
-                android:onClick="btnHaveAccount"
+                android:onClick="haveAnAccount"
                 android:text="Bir hesabım var"
                 android:textColor="#000000"
                 android:textSize="15sp"
@@ -178,8 +178,8 @@
                 android:id="@+id/footerText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
                 android:layout_gravity="center"
+                android:layout_marginHorizontal="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="400dp"
                 android:text="@string/text_signIn"
