--- a/android/app/src/main/res/layout/activity_sign_up_student.xml
+++ b/android/app/src/main/res/layout/activity_sign_up_student.xml
@@ -194,14 +194,14 @@
 
             <!-- Hesabım var -->
             <Button
-                android:id="@+id/haveAccount"
+                android:id="@+id/haveAnAccount"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginVertical="5dp"
                 android:backgroundTint="#EEEEEE"
-                android:onClick="btnHaveAccount"
+                android:onClick="haveAnAccount"
                 android:text="Bir hesabım var"
                 android:textColor="#000000"
                 android:textSize="15sp"
