--- a/android/app/src/main/res/layout/activity_department_info.xml
+++ b/android/app/src/main/res/layout/activity_department_info.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EFEEF5"
+    android:background="#FFFFFF"
     tools:context=".view.studentView.DepartmentInfoActivity">
 
     <!-- Header -->
@@ -13,7 +13,7 @@
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        app:cardBackgroundColor="#1A9AAF"
+        app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,13 +25,13 @@
 
         <ImageView
             android:id="@+id/backToProfile"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="17dp"
+            android:layout_height="17dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:onClick="backToProfile"
-            android:src="@drawable/baseline_arrow_back_ios_24"
+            android:src="@drawable/back_icon"
             tools:ignore="OnClick" />
 
 
@@ -42,8 +42,8 @@
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Bölüm Bilgileri"
-            android:textColor="#FFFFFF"
-            android:textSize="15sp"
+            android:textColor="#000000"
+            android:textSize="16sp"
             android:textStyle="bold" />
     </com.google.android.material.card.MaterialCardView>
 
@@ -79,10 +79,11 @@
 
             <EditText
                 android:id="@+id/departmentName"
-                android:layout_width="360dp"
-                android:layout_height="54dp"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="20dp"
                 android:layout_gravity="center"
-                android:layout_marginVertical="7dp"
+                android:layout_marginVertical="10dp"
                 android:background="@drawable/edittext_bg"
                 android:hint="Bölümünüzü Girin"
                 android:inputType="text"
@@ -107,8 +108,9 @@
 
             <AutoCompleteTextView
                 android:id="@+id/classNumber"
-                android:layout_width="360dp"
-                android:layout_height="54dp"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="20dp"
                 android:layout_gravity="center"
                 android:layout_marginVertical="10dp"
                 android:background="@drawable/edittext_bg"
@@ -126,12 +128,13 @@
 
             <Button
                 android:id="@+id/saveDepartmentInfo"
-                android:layout_width="360dp"
-                android:layout_height="55dp"
+                android:layout_width="match_parent"
+                android:layout_height="52dp"
+                android:layout_marginHorizontal="20dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="400dp"
-                android:backgroundTint="#4CAF50"
+                android:backgroundTint="#124090"
                 android:elevation="8dp"
                 android:onClick="saveDepartmentInfo"
                 android:text="Kaydet"
@@ -145,7 +148,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="OnClick"
                 tools:layout_editor_absoluteY="368dp" />
-
 
         </LinearLayout>
     </ScrollView>
