--- a/android/app/src/main/res/layout/activity_request_detail_student.xml
+++ b/android/app/src/main/res/layout/activity_request_detail_student.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="#EFEEF5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".view.studentView.RequestDetailStudentActivity">
 
     <!-- Header -->
@@ -13,25 +13,25 @@
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        app:cardBackgroundColor="#1A9AAF"
+        app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="0dp"
-        app:cardElevation="7dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:cardElevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="@android:color/transparent"
         app:strokeWidth="0dp">
 
 
         <ImageView
             android:id="@+id/gotoCreateRequest"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="17dp"
+            android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="10dp"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
             android:onClick="previousPage"
-            android:src="@drawable/baseline_arrow_back_ios_24"
+            android:src="@drawable/back_icon"
             tools:ignore="OnClick" />
 
 
@@ -42,9 +42,9 @@
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Talep Detayı"
-            android:textColor="#FFFFFF"
-            android:textSize="15sp"
-            android:textStyle="bold"/>
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold" />
     </com.google.android.material.card.MaterialCardView>
 
     <!-- Scrollview -->
@@ -52,19 +52,19 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
-        app:layout_constraintTop_toBottomOf="@id/materialCardView"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/materialCardView">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="16dp"
-            android:paddingBottom="32dp"
             android:paddingStart="16dp"
-            android:paddingEnd="16dp">
+            android:paddingTop="16dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="32dp">
 
             <!--Talep Durumu-->
             <com.google.android.material.card.MaterialCardView
@@ -135,8 +135,8 @@
                         android:layout_marginVertical="12dp"
                         android:text="Mesaj:"
                         android:textColor="#000000"
-                        android:textStyle="bold"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
 
 
                     <View
@@ -197,15 +197,15 @@
                                     android:textColor="#666666"
                                     android:textSize="12sp"
                                     android:textStyle="bold" />
+
                                 <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_marginBottom="2dp"
                                     android:text="tto@ahievran.edu.tr"
-                                    android:textColor="#1A9AAF"
+                                    android:textColor="#124090"
                                     android:textSize="12sp"
                                     android:textStyle="bold" />
-
 
 
                             </LinearLayout>
@@ -296,9 +296,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
+                        android:orientation="horizontal"
                         app:flexWrap="wrap"
-                        app:justifyContent="flex_start"
-                        android:orientation="horizontal"/>
+                        app:justifyContent="flex_start" />
 
                 </LinearLayout>
 
