--- a/android/app/src/main/res/layout/activity_university_info.xml
+++ b/android/app/src/main/res/layout/activity_university_info.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EFEEF5"
+    android:background="#FFFFFF"
     tools:context=".view.studentView.UniversityInfoActivity">
 
     <!-- Header -->
@@ -13,7 +13,7 @@
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        app:cardBackgroundColor="#1A9AAF"
+        app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,13 +25,13 @@
 
         <ImageView
             android:id="@+id/backToProfile"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="17dp"
+            android:layout_height="17dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:onClick="backToProfile"
-            android:src="@drawable/baseline_arrow_back_ios_24"
+            android:src="@drawable/back_icon"
             tools:ignore="OnClick" />
 
 
@@ -42,8 +42,8 @@
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Üniversite Bilgileri"
-            android:textColor="#FFFFFF"
-            android:textSize="15sp"
+            android:textColor="#000000"
+            android:textSize="16sp"
             android:textStyle="bold" />
     </com.google.android.material.card.MaterialCardView>
 
@@ -77,36 +77,34 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
-
             <AutoCompleteTextView
                 android:id="@+id/universityName"
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginVertical="7dp"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="10dp"
                 android:background="@drawable/edittext_bg"
+                android:cursorVisible="false"
                 android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24"
+                android:dropDownHeight="300dp"
+                android:dropDownVerticalOffset="5dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:hint="Üniversitenizi Seçiniz"
                 android:padding="12dp"
                 android:textColor="#000000"
                 android:textColorHint="#999999"
-                android:textSize="16sp"
-                android:cursorVisible="false"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:dropDownHeight="300dp"
-                android:dropDownVerticalOffset="5dp"/>
-
-
+                android:textSize="16sp" />
 
             <Button
                 android:id="@+id/saveUniInfo"
-                android:layout_width="360dp"
-                android:layout_height="55dp"
+                android:layout_width="match_parent"
+                android:layout_height="52dp"
                 android:layout_gravity="center"
+                android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="7dp"
                 android:layout_marginBottom="500dp"
-                android:backgroundTint="#4CAF50"
+                android:backgroundTint="#124090"
                 android:elevation="8dp"
                 android:text="Kaydet"
                 android:textColor="#FFFFFF"
