--- a/android/app/src/main/res/layout/activity_verification.xml
+++ b/android/app/src/main/res/layout/activity_verification.xml
@@ -8,24 +8,51 @@
     android:background="#FFFFFF"
     tools:context=".view.academicianView.VerificationActivity">
 
+    <!-- Header -->
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/materialCardView"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:cardBackgroundColor="#FFFFFF"
+        app:cardCornerRadius="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="@android:color/transparent"
+        app:strokeWidth="0dp">
 
-    <!-- Scrollview -->
+
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="17dp"
+            android:layout_height="17dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:onClick="back"
+            android:src="@drawable/back_icon"
+            tools:ignore="OnClick" />
+
+
+    </com.google.android.material.card.MaterialCardView>
+
     <ScrollView
-        android:id="@+id/scrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/materialCardView">
 
-        <!-- Scroll içeriği -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:gravity="top"
             android:orientation="vertical"
-            android:padding="20dp">
+            android:paddingTop="16dp"
+            android:paddingBottom="32dp">
 
             <!-- Logo -->
             <ImageView
@@ -33,7 +60,7 @@
                 android:layout_width="130dp"
                 android:layout_height="130dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="5dp"
                 app:layout_constraintBottom_toTopOf="@+id/appName"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="USIApp"
+                android:text="Hesap Doğrulama"
                 android:textColor="#000000"
                 android:textSize="25sp"
                 android:textStyle="bold"
@@ -53,27 +80,22 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/logoTto" />
 
-            <TextView
-                android:id="@+id/signInText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <ImageView
+                android:layout_width="130dp"
+                android:layout_height="130dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="30dp"
-                android:text="Email Doğrulama"
-                android:textColor="#000000"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/appName" />
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:src="@drawable/verification_icon" />
 
             <TextView
                 android:id="@+id/chooseText"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:text="Hesabını doğrulaman için mailine bir doğrulama linki gönderdik. Lütfen spam klasörünü de kontrol et ve doğrulama linkine tıkla."
+                android:layout_marginHorizontal="3dp"
+                android:layout_marginTop="10dp"
+                android:text="Hesabınızı doğrulamanız için mail adresinize bir doğrulama maili gönderdik. Lütfen spam klasörünü kontrol edip onayladıktan sonra Hesabımı Doğruladım butonuna basınız."
                 android:textAlignment="center"
                 android:textColor="#000000"
                 android:textSize="16sp"
@@ -85,10 +107,10 @@
             <Button
                 android:id="@+id/btnVerification"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="55dp"
                 android:layout_gravity="center"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="15dp"
                 android:backgroundTint="#124090"
                 android:onClick="mailVerification"
                 android:text="Hesabımı Doğruladım"
@@ -97,6 +119,25 @@
                 android:textStyle="bold"
                 app:cornerRadius="10dp"
                 tools:ignore="OnClick" />
+
+            <!-- Alt Bilgi -->
+            <TextView
+                android:id="@+id/footerText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="400dp"
+                android:text="@string/verification_string"
+                android:textAlignment="center"
+                android:textColor="#888888"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.491"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnIndustry" />
         </LinearLayout>
     </ScrollView>
 
