--- a/android/app/src/main/res/layout/fragment_create_request_student.xml
+++ b/android/app/src/main/res/layout/fragment_create_request_student.xml
@@ -5,7 +5,7 @@
     android:id="@+id/fragmentCreateRequestStudent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EFEEF5"
+    android:background="#FFFFFF"
     tools:context=".view.studentView.CreateRequestStudentFragment">
 
     <!-- Header -->
@@ -13,7 +13,7 @@
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        app:cardBackgroundColor="#1A9AAF"
+        app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,8 +29,8 @@
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Taleplerim"
-            android:textColor="#FFFFFF"
-            android:textSize="15sp"
+            android:textColor="#000000"
+            android:textSize="16sp"
             android:textStyle="bold" />
     </com.google.android.material.card.MaterialCardView>
 
@@ -43,20 +43,20 @@
         android:overScrollMode="always"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
-        app:layout_constraintTop_toBottomOf="@id/materialCardView"
         app:layout_constraintBottom_toTopOf="@id/createStudentRequest"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/materialCardView"
         tools:listitem="@layout/item_request_card" />
-
 
     <!-- Yeni Talep Butonu -->
     <Button
         android:id="@+id/createStudentRequest"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_margin="10dp"
-        android:backgroundTint="#1A9AAF"
+        android:layout_height="52dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="10dp"
+        android:backgroundTint="#124090"
         android:text="Yeni Talep Oluştur"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
